[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toybox-3d-api"
version = "0.1.0"
description = "Python API client for ToyBox 3D printers (make.toys) via Meteor DDP"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "stgarrity"}
]
dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/stgarrity/toybox-api"
Repository = "https://github.com/stgarrity/toybox-api"
Issues = "https://github.com/stgarrity/toybox-api/issues"
